--- a/layouts/list.html
+++ b/layouts/list.html
@@ -3,7 +3,7 @@
     <div id='blog' class='wrap'>
         <div id='intro'>
             <div class='quote'>
-                I learned very early the difference between knowing the name of something and knowing something.               
+                <p>I learned very early the difference between knowing the name of something and knowing something.</p>            
                 <a href='https://en.wikiquote.org/wiki/Richard_Feynman' target='_blank'>Richard Feynman</a>
             </div>
         </div>
